k8s/02-service-hpa-pdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: fullstack-prod
  labels:
    app: node-api
spec:
  type: ClusterIP
  selector:
    app: node-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  sessionAffinity: None
